<resources>
    <string name="app_name">Beta</string>
    <string name="instructions">Coloca tu huella dactilar para verificar tu identidad</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_menu">Menu de Control</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_configuracion">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Habilitar nuevas notificaciones</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="SaludoRegistro">Registra tu cuenta</string>
    <string name="RegistroEmail">Registra tu Email</string>
    <string name="RegistroPassword">Registra tu contraseña</string>
    <string name="Registrarse">No tienes cuenta? registrate ya!</string>
    <string name="Login">Entrar</string>
    <string name="OlvidasteTuContraseña">Olvidaste tu contraseña?</string>
    <string name="SaludodeBienvenida">Hola! Inicia sesión para comenzar!</string>
    <string name="VerificacionEmail">Email no verificado (Presiona para verificar)</string>
    <string name="RegistroUsuario">Escribe el nombre de tu usuario</string>
    <string name="TotalSensores">Sensores Activos: </string>
    <string name="Totalhabitaciones">Habitaciones Activas:</string>
    <string name="Sensores">Sensores</string>
    <string name="Seleccionahabitación">Selecciona Habitacion</string>
    <string name="NOTLOGIN">No se completo el inicio de sesión.</string>
    <string name="registration_success">Registro exitoso :)</string>
    <string name="ActualizarRegistro">Actualizar Verificación</string>
    <string name="CerrarSesion">Cerrar Sesión</string>
    <string name="Compartir">Compartir</string>
    <string name="Soporte">Soporte</string>
    <string name="reconocimiento">Reconocimiento Facial</string>
    <string name="ControlHogar">Control del hogar</string>
    <string name="NOCERRO">No se completo el cierre de sesión</string>
    <string name="Habitaciones">Habitaciones Activas</string>
</resources>
