<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/ReconocimientoFacial"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/reconocimiento" />
    <item
        android:id="@+id/ControlDelHogar"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/ControlHogar" />
    <item
        android:id="@+id/Sensores"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/Sensores" />



    <item android:title="Herramientas">
        <menu>
            <item
                android:id="@+id/Configuracion"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/Compartir"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/Compartir" />
            <item
                android:id="@+id/Soporte"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/Soporte" />
        </menu>
    </item>
    </group>
</menu>
