<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.SensorFragment">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="384dp"
        android:layout_height="69dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/FragmentoSensorCuarto"
            style="@android:style/TextAppearance.DeviceDefault.Widget.TextView"
            android:layout_width="183dp"
            android:layout_height="match_parent"
            android:text="@string/Totalhabitaciones" />


        <TextView
            android:id="@+id/FragmentoSensorCantidad"
            style="@android:style/TextAppearance.DeviceDefault.Widget.TextView"
            android:layout_width="203dp"
            android:layout_height="match_parent"
            android:text="@string/TotalSensores" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:id="@+id/textView2"
        style="@android:style/Widget.TextView.SpinnerItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Sensores"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="69dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal">

    </android.support.v7.widget.RecyclerView>
    <ListView
        android:id="@+id/FragmentListaSensores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>
</LinearLayout>