<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.LoginActivity">


    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/ipn"
            android:layout_width="25dp"
            android:layout_height="115dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ipn2" />

        <View
            android:layout_width="233dp"
            android:layout_height="50dp">

        </View>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="25dp"
            android:layout_height="115dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/upiita" />
    </LinearLayout>


    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:paddingTop="0dp"
        android:src="@drawable/boxyellow" />

    <TextView
        android:id="@+id/saludobienvenida"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:text="@string/SaludodeBienvenida"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/ForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:clickable="true"
                android:text="@string/OlvidasteTuContraseña"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="0px"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:backgroundTint="@android:color/holo_blue_light"
                    android:elevation="2dp"
                    android:text="@string/Login"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/BtnGoogle"
                    android:layout_width="0px"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="5dp"
                    android:text="Text"
                    android:textSize="18sp"
                    android:visibility="invisible">

                </com.google.android.gms.common.SignInButton>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/Registrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/Registrarse"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textColor="@color/colorPrimary"/>
    <View
        android:layout_width="wrap_content"
        android:layout_height="20dp" />



    <TextView
        android:id="@+id/firma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Diseñado por alumnos de UPIITA"
        android:textAlignment="textEnd"
        android:typeface="normal"
        android:textColor="@color/colorPrimary"/>

</LinearLayout>