<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".Activities.Register2Activity">


    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <ImageView
        android:id="@+id/Foto"
        android:layout_width="match_parent"
        android:layout_height="202dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:text="@string/SaludoRegistro"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:text="@string/RegistroEmail"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/REmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="142dp" />

    <TextView
        android:id="@+id/RefPassword"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:clickable="true"
        android:text="@string/RegistroPassword"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="231dp" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Escribe tu contraseña"
        android:inputType="textPassword"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="188dp" />

    <TextView
        android:textAlignment="center"
        android:id="@+id/RefPassword2"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:text="@string/RegistroPassword"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="185dp" />

    <EditText
        android:id="@+id/Password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Escribe nuevamente tu contraseña"
        android:inputType="textPassword"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="279dp" />

    <LinearLayout
        android:layout_width="355dp"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Login"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:text="Volver" />

        <Button
            android:id="@+id/EntrarMenu"
            style="@android:style/Widget.Holo.Button.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shadowColor="@color/colorPrimary"
            android:text="Continuar"
            android:textAlignment="center"
            android:textColorLink="@color/design_default_color_primary_dark" />
        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />
    </LinearLayout>



</android.support.constraint.ConstraintLayout>